--- a/src/pages/AboutPage.css
+++ b/src/pages/AboutPage.css
@@ -1,10 +1,3 @@
-.textcontainer {
-    max-width: 800px;
-    line-height: 1.5;
-    text-align: left;
-    margin: 0 auto;
-}
-  
 .bodytext p {
     margin-bottom: 20px;
 }
