--- a/src/pages/ProjectPage.css
+++ b/src/pages/ProjectPage.css
@@ -1,19 +1,9 @@
-.textcontainer {
-    max-width: 800px;
-    padding-left: 20%;
-    padding: 0%;
-    line-height: 1.6;
-    color: #333;
-    text-align: left;
-    padding-bottom: 3rem;
-}
-
 .bodytext {
     width: 75%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding-left: 5rem;
+    padding-left: 4rem;
 }
 
 .custom-heading {
@@ -31,12 +21,7 @@
 }
 
 @media only screen and (min-width: 768px) { /*Style for desktop, I left textcontainer and bodytext here, since they are needed in both about and projects page*/
-
-    .textcontainer{
-        padding-bottom: 2rem;
-        max-width: 100%;
-    }
-  
+    
     .bodytext {
         font-size: 1.1rem;
         padding-left: 5rem;
